--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/dist/ios-cmake"]
 	path = lib/dist/ios-cmake
 	url = https://github.com/vovasty/ios-cmake.git
+[submodule "lib/dist/OpenSSL-for-iPhone"]
+	path = lib/dist/OpenSSL-for-iPhone
+	url = https://github.com/x2on/OpenSSL-for-iPhone.git
